syntax = "proto3";

option csharp_namespace = "GrpcServiceDemo";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Demo (DemoRequest) returns(DemoResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message DemoResponse{
	int32 Id=1;
}
message DemoRequest {
	int32 Id=1;
	string Title=2;
	string CreateDate=3; 
}
